<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="summarize"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_summarize_label"
        android:shortcutLongLabel="@string/shortcut_summarize_long">
        <intent
            android:action="com.rajit2004.deepseekwidget.action.QUICK_PROMPT"
            android:targetPackage="com.rajit2004.deepseekwidget"
            android:targetClass="com.rajit2004.deepseekwidget.InputActivity" />
        <extra
            android:name="com.rajit2004.deepseekwidget.EXTRA_PROMPT_PREFIX"
            android:value="@string/prefix_summarize" />
    </shortcut>

    <shortcut
        android:shortcutId="translate"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_translate_label"
        android:shortcutLongLabel="@string/shortcut_translate_long">
        <intent
            android:action="com.rajit2004.deepseekwidget.action.QUICK_PROMPT"
            android:targetPackage="com.rajit2004.deepseekwidget"
            android:targetClass="com.rajit2004.deepseekwidget.InputActivity" />
        <extra
            android:name="com.rajit2004.deepseekwidget.EXTRA_PROMPT_PREFIX"
            android:value="@string/prefix_translate" />
    </shortcut>

    <shortcut
        android:shortcutId="explain_code"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_explain_label"
        android:shortcutLongLabel="@string/shortcut_explain_long">
        <intent
            android:action="com.rajit2004.deepseekwidget.action.QUICK_PROMPT"
            android:targetPackage="com.rajit2004.deepseekwidget"
            android:targetClass="com.rajit2004.deepseekwidget.InputActivity" />
        <extra
            android:name="com.rajit2004.deepseekwidget.EXTRA_PROMPT_PREFIX"
            android:value="@string/prefix_explain" />
    </shortcut>

    <shortcut
        android:shortcutId="write_email"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_email_label"
        android:shortcutLongLabel="@string/shortcut_email_long">
        <intent
            android:action="com.rajit2004.deepseekwidget.action.QUICK_PROMPT"
            android:targetPackage="com.rajit2004.deepseekwidget"
            android:targetClass="com.rajit2004.deepseekwidget.InputActivity" />
        <extra
            android:name="com.rajit2004.deepseekwidget.EXTRA_PROMPT_PREFIX"
            android:value="@string/prefix_email" />
    </shortcut>

</shortcuts>
